--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,18 @@ authors = ["Automata Team"]
 homepage = "https://www.ata.network/"
 
 [features]
+default = ["sgx_types"]
 builder = []
 sysroot = []
+dcap = ["dep:sgx-dcap-ql-rs", "sgx_trts"]
+app = ["sgx_urts", "sgx_types"]
+patch_rand = ["dummy_pthread_atfork"]
+patch_assert_fail = ["sgx_libc"]
+dummy_pthread_atfork = []
+
+sgx_no_tstd = []
 sgx_libc = ["dep:sgx_libc"]
-sgx_types = []
+sgx_libc_pthread = ["sgx_libc", "sgx_libc/pthread"]
 sgx_urts = ["dep:sgx_urts"]
 sgx_alloc = ["dep:sgx_alloc"]
 sgx_crypto = ["dep:sgx_crypto"]
@@ -22,9 +30,11 @@ sgx_ffi = ["dep:sgx_ffi"]
 sgx_ukey_exchange = ["dep:sgx_ukey_exchange"]
 sgx_tkey_exchange = ["dep:sgx_tkey_exchange"]
 sgx_ra_msg = ["dep:sgx_ra_msg"]
-sgx_no_tstd = ["dep:sgx_no_tstd"]
 sgx_rand = ["dep:sgx_rand"]
-sgx_trts = ["dep:sgx_trts"]
+sgx_types = []
+sgx_trts = []
+sgx_tse = []
+sgx_unwind = ["dep:sgx_unwind"]
 
 [dependencies]
 cc = { version = "1.1.5" }
@@ -32,23 +42,29 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 automata-sgx-builder-sysroot = { path = "sysroot" }
 
-sgx_types = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-preview-08-08" }
-sgx_libc = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-preview-08-08", optional = true }
-sgx_urts = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-preview-08-08", optional = true }
-sgx_alloc = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-preview-08-08", optional = true }
-sgx_crypto = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-preview-08-08", optional = true }
-sgx_dcap_ra_msg = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-preview-08-08", optional = true }
-sgx_dcap_tkey_exchange = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-preview-08-08", optional = true }
-sgx_dcap_tvl = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-preview-08-08", optional = true }
-sgx_demangle = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-preview-08-08", optional = true }
-sgx_edl = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-preview-08-08", optional = true }
-sgx_ffi = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-preview-08-08", optional = true }
-sgx_ukey_exchange = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-preview-08-08", optional = true }
-sgx_tkey_exchange = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-preview-08-08", optional = true }
-sgx_ra_msg = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-preview-08-08", optional = true }
-sgx_no_tstd = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-preview-08-08", optional = true }
-sgx_rand = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-preview-08-08", optional = true }
-sgx_trts = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-preview-08-08", optional = true }
+sgx_no_tstd = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-nightly-2024-01-01" }
+sgx_libc = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-nightly-2024-01-01", optional = true }
+sgx_urts = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-nightly-2024-01-01", optional = true }
+sgx_alloc = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-nightly-2024-01-01", optional = true }
+sgx_crypto = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-nightly-2024-01-01", optional = true }
+sgx_dcap_ra_msg = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-nightly-2024-01-01", optional = true }
+sgx_dcap_tkey_exchange = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-nightly-2024-01-01", optional = true }
+sgx_dcap_tvl = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-nightly-2024-01-01", optional = true }
+sgx_demangle = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-nightly-2024-01-01", optional = true }
+sgx_edl = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-nightly-2024-01-01", optional = true }
+sgx_ffi = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-nightly-2024-01-01", optional = true }
+sgx_ukey_exchange = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-nightly-2024-01-01", optional = true }
+sgx_tkey_exchange = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-nightly-2024-01-01", optional = true }
+sgx_ra_msg = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-nightly-2024-01-01", optional = true }
+sgx_rand = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-nightly-2024-01-01", optional = true }
+sgx_unwind = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-nightly-2024-01-01", optional = true }
+
+sgx-dcap-ql-rs = { git = "https://github.com/automata-network/SGXDataCenterAttestationPrimitives.git", branch = "automata_sgx_builder", optional = true }
+
+[target.'cfg(not(target_vendor = "teaclave"))'.dependencies]
+sgx_types = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-nightly-2024-01-01" }
+sgx_trts = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-nightly-2024-01-01" }
+sgx_tse = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-nightly-2024-01-01" }
 
 [workspace]
 resolver = "2"
