--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2021"
 authors = ["Automata Team"]
 homepage = "https://www.ata.network/"
 
+[package.metadata]
+rust-toolchain = "v2.0.0-nightly-2024-01-01"
+
 [features]
 default = ["sgx_types"]
 tstd_enclave = ["dcap", "sgx_trts", "sgx_types", "sgx_libc_pthread", "patch_rand", "patch_assert_fail"]
