--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,22 +48,22 @@ serde = { version = "=1.0.197", features = ["derive"] }
 serde_json = "1"
 automata-build-script = { path = "build-script", optional = true }
 
-#sgx_no_tstd = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-nightly-2024-02-01" }
-sgx_libc = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-nightly-2024-02-01", optional = true }
-sgx_urts = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-nightly-2024-02-01", optional = true }
-sgx_alloc = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-nightly-2024-02-01", optional = true }
-sgx_crypto = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-nightly-2024-02-01", optional = true }
-sgx_dcap_ra_msg = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-nightly-2024-02-01", optional = true }
-sgx_dcap_tkey_exchange = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-nightly-2024-02-01", optional = true }
-sgx_dcap_tvl = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-nightly-2024-02-01", optional = true }
-sgx_demangle = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-nightly-2024-02-01", optional = true }
-sgx_edl = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-nightly-2024-02-01", optional = true }
-sgx_ffi = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-nightly-2024-02-01", optional = true }
-sgx_ukey_exchange = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-nightly-2024-02-01", optional = true }
-sgx_tkey_exchange = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-nightly-2024-02-01", optional = true }
-sgx_ra_msg = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-nightly-2024-02-01", optional = true }
-sgx_rand = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-nightly-2024-02-01", optional = true }
-sgx_unwind = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-nightly-2024-02-01", optional = true }
+#sgx_no_tstd = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "2.18_nightly_2024-02-01" }
+sgx_libc = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "2.18_nightly_2024-02-01", optional = true }
+sgx_urts = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "2.18_nightly_2024-02-01", optional = true }
+sgx_alloc = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "2.18_nightly_2024-02-01", optional = true }
+sgx_crypto = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "2.18_nightly_2024-02-01", optional = true }
+sgx_dcap_ra_msg = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "2.18_nightly_2024-02-01", optional = true }
+sgx_dcap_tkey_exchange = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "2.18_nightly_2024-02-01", optional = true }
+sgx_dcap_tvl = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "2.18_nightly_2024-02-01", optional = true }
+sgx_demangle = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "2.18_nightly_2024-02-01", optional = true }
+sgx_edl = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "2.18_nightly_2024-02-01", optional = true }
+sgx_ffi = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "2.18_nightly_2024-02-01", optional = true }
+sgx_ukey_exchange = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "2.18_nightly_2024-02-01", optional = true }
+sgx_tkey_exchange = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "2.18_nightly_2024-02-01", optional = true }
+sgx_ra_msg = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "2.18_nightly_2024-02-01", optional = true }
+sgx_rand = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "2.18_nightly_2024-02-01", optional = true }
+sgx_unwind = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "2.18_nightly_2024-02-01", optional = true }
 
 sgx-dcap-ql-rs = { git = "https://github.com/automata-network/SGXDataCenterAttestationPrimitives.git", branch = "automata_sgx_builder", optional = true }
 
@@ -72,9 +72,9 @@ ctor = "0.2"
 
 [target.'cfg(not(target_vendor = "teaclave"))'.dependencies]
 automata-sgx-sdk-sysroot = { path = "sysroot" }
-sgx_types = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-nightly-2024-02-01" }
-#sgx_trts = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-nightly-2024-02-01" }
-#sgx_tse = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "v2.0.0-nightly-2024-02-01" }
+sgx_types = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "2.18_nightly_2024-02-01" }
+#sgx_trts = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "2.18_nightly_2024-02-01" }
+#sgx_tse = { git = "https://github.com/automata-network/incubator-teaclave-sgx-sdk", branch = "2.18_nightly_2024-02-01" }
 
 [workspace]
 resolver = "2"
